--- a/styles/ccs style.css
+++ b/styles/ccs style.css
@@ -43,15 +43,74 @@ padding: 230px 530px 300px 530px;
 .new-year-photo{
     text-align:center;
 }
-/* wellcome section */
-#id{
-    color: #FFF;
-    font-size: 70px;
-    font-weight: 800px;
-}
-.midnight-party{
+/* welcome section */
+.new-year-party{
     background-image: url(../resources/Vectorrr.png);
     background-size: cover;
-    width: 1300px;
-    height: 600px;   
+    border-radius: 16px;
+}
+.welcome{
+    color: #FFF;
+    font-size: 100px;
+    font-weight: 800px;
+    width: 700px;
+    padding: 160px 560px 0px 130px;
+}
+.discription{
+    color: rgba(255, 255, 255, 0.80);
+    font-size: 30px;
+    padding: 20px 540px 50px 130px;
+    font-weight: 700px;
+    width: 1000px;
+}
+.join-now{
+    color: #FFF;
+    text-align: left;
+    font-size: 35px;
+    font-weight: 600;
+    padding: 0px 160px;
+}
+.new-year-party.Group{
+    width: 3px;
+    height: 3px;
+    padding:
+}
+/* Place Date Time section */
+.primary-color{
+    color: red;
+}
+.Place{
+    font-size: 50px;
+    font-weight: 600px;
+    padding: 300px 385px 220px;
+    background-color: rgb(248, 197, 214);
+    background-size: cover;
+    text-align: center;
+    border-radius:16px;
+}
+.button{
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700px;
+    background-color: red;
+    border-radius: 10px;
+    padding: 15px;
+}
+/* Comming Soon 2024 section */
+.comming-soon-2024{
+    background-color: #FFF;
+    background-size: cover;
+    text-align: center;
+}
+.ellipse{
+    /* border-radius: 350px; */
+    /* border-color: red; */
+    /* width: 365px; */
+    /* height: 366px; */
+    
+
+}
+.new{
+    text-align: r;
 }
