--- a/styles/ccs style.css
+++ b/styles/ccs style.css
@@ -222,11 +222,9 @@ font-weight: 700px;
 /* footer-section */
 .unsubscribe-div{
     display: flex;
+    justify-content: space-between;
     color: white;
-}
-.unsubscribe-haed{
-    font-size: 30px;
-    font-weight: 150px;
+    padding: 60px 70px 100px 70px;
 }
 .unsubscribe-haed{
     font-size: 30px;
@@ -245,7 +243,10 @@ font-weight: 700px;
     color: white;
     display: flex;
     justify-content: space-between;
-font-size: 30px;
-font-weight: 500px;
-padding-bottom: 300px;
+    font-size: 30px;
+    font-weight: 500px;
+    padding: 0px 70px 300px 70px;
+}
+.hr{
+    padding: 0px 70px;
 }
