--- a/styles/ccs style.css
+++ b/styles/ccs style.css
@@ -219,6 +219,25 @@ font-weight: 700px;
     font-size: 30px;
     font-weight: 200;
 }
+
+.email{
+    border-radius: 50px;
+    background-size: 50px;
+    padding: 1px;
+    text-align: center;
+}
+.Email{
+    color: rgba(7, 2, 17, 0.30);
+    text-align: center;
+    font-size: 30px;
+    background-color: white;
+}
+.Subscribe-button{
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    background-color: red;
+}
 /* footer-section */
 .unsubscribe-div{
     display: flex;
